--- a/src/components/ImageViewer/ImageViewer.module.scss
+++ b/src/components/ImageViewer/ImageViewer.module.scss
@@ -1,23 +1,13 @@
-.dimmed {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #000;
-  z-index: 9999;
-
-  .btn-close {
-    width: 40px;
-    height: 40px;
-    fill: #000;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 2;
-    cursor: pointer;
-    &:hover {
-      fill: #fff;
-    }
+.btn-close {
+  width: 40px;
+  height: 40px;
+  fill: #fff;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  cursor: pointer;
+  &:hover {
+    fill: orange;
   }
 }
