Refactor: README 및 font.scss 파일 최적화 적용 및 폰트 서브셋 추가

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -1,7 +1,8 @@
 @font-face {
   font-family: 'NanumNaEuiANaeSonGeurSsi';
   src:
-    url(../assets//fonts/NanumNaEuiANaeSonGeurSsi.woff2) format('woff2'),
-    url(../assets//fonts/NanumNaEuiANaeSonGeurSsi.woff) format('woff'),
-    url(../assets//fonts/NanumNaEuiANaeSonGeurSsi.ttf) format('truetype');
+    url(../assets//fonts/subset-NanumNaEuiANaeSonGeurSsi.woff2) format('woff2'),
+    url(../assets//fonts/subset-NanumNaEuiANaeSonGeurSsi.woff) format('woff'),
+    url(../assets//fonts/subset-NanumNaEuiANaeSonGeurSsi.ttf) format('truetype');
+  font-display: fallback;
 }
