--- a/src/components/shared/FullScreenMessage.module.scss
+++ b/src/components/shared/FullScreenMessage.module.scss
@@ -22,12 +22,26 @@
 
 @keyframes heart {
   0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  38% {
+    transform: scale(0.85);
+  }
+  45% {
     transform: scale(1);
   }
-  50% {
-    transform: scale(1.2);
+  60% {
+    transform: scale(0.95);
   }
   100% {
-    transform: scale(1);
+    transform: scale(0.9);
   }
+}
+
+.icon-error {
+  width: 24px;
+  height: 24px;
 }
