--- a/src/components/sections/Heading.module.scss
+++ b/src/components/sections/Heading.module.scss
@@ -1,8 +1,9 @@
 .container {
   text-align: center;
   font-weight: bold;
-  .text-data {
+  .text-date {
     font-size: 30px;
+    letter-spacing: 6px;
     margin-bottom: 8px;
   }
   .text-day {
